[gd_scene load_steps=26 format=2]

[ext_resource path="res://Kinematics/Player/Animation/Idle1.png" type="Texture" id=1]
[ext_resource path="res://Kinematics/Player/Animation/Idle2.png" type="Texture" id=2]
[ext_resource path="res://Kinematics/Player/Animation/Idle3.png" type="Texture" id=3]
[ext_resource path="res://Kinematics/Player/Animation/Idle4.png" type="Texture" id=4]
[ext_resource path="res://Kinematics/Player/Player_Script.gd" type="Script" id=5]
[ext_resource path="res://Kinematics/Player/Animation/Rig/Body.png" type="Texture" id=6]
[ext_resource path="res://Kinematics/Player/Animation/Rig/Hand.png" type="Texture" id=7]
[ext_resource path="res://Kinematics/Player/Animation/Rig/Hat.png" type="Texture" id=8]
[ext_resource path="res://Kinematics/Player/Animation/Rig/Leg.png" type="Texture" id=9]
[ext_resource path="res://Kinematics/Player/Extra/pistol.png" type="Texture" id=10]
[ext_resource path="res://Assets/Sound/FX/Shooting.wav" type="AudioStream" id=11]
[ext_resource path="res://Assets/Pixellari.ttf" type="DynamicFontData" id=12]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "Idle",
"speed": 4.0
} ]

[sub_resource type="DynamicFont" id=2]
outline_size = 1
font_data = ExtResource( 12 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 6.73583, 34 )

[sub_resource type="Animation" id=4]
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath("Body:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Body:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, -2, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Body:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("hat:position:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.2, 0.5, 0.7, 1 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("hat:position:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( -28, -0.25, 0, 0.25, 0, -30, -0.25, 0, 0.25, 0, -30, -0.25, 0, 0.25, 0, -28, -0.25, 0, 0.25, 0, -28, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 0.7, 1, 1.1 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("Hand:position:x")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 1.75, -0.25, 0, 0.25, 0, 1.75, -0.25, 0, 0.25, 0, 1.75, -0.25, 0, 0.25, 0, 1.75, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.2, 0.5, 0.7, 1 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("Hand:position:y")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( -7.5, -0.25, 0, 0.25, 0, -9, -0.25, 0, 0.25, 0, -9, -0.25, 0, 0.25, 0, -7.5, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.2, 0.5, 0.7, 1 )
}
tracks/7/type = "bezier"
tracks/7/path = NodePath("Hand:rotation_degrees")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, -6.02092, -0.25, 0, 0.25, 0, -0.491577, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.2, 0.5, 1 )
}
tracks/8/type = "bezier"
tracks/8/path = NodePath("hat:rotation_degrees")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/9/type = "bezier"
tracks/9/path = NodePath("Hand2:rotation_degrees")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/10/type = "bezier"
tracks/10/path = NodePath("Leg:rotation_degrees")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/11/type = "bezier"
tracks/11/path = NodePath("Leg2:rotation_degrees")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/12/type = "bezier"
tracks/12/path = NodePath("Leg2:position:x")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"points": PoolRealArray( 1.80712, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/13/type = "bezier"
tracks/13/path = NodePath("Leg2:position:y")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"points": PoolRealArray( 15.0919, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/14/type = "bezier"
tracks/14/path = NodePath("Leg:position:x")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"points": PoolRealArray( 1.53488, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/15/type = "bezier"
tracks/15/path = NodePath("Leg:position:y")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/keys = {
"points": PoolRealArray( 15.0919, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=5]
length = 1.9
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath("Hand2:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1.75, -0.25, 0, 0.25, 0, 0.728039, -0.25, 0, 0.25, 0, 2.33398, -0.25, 0, 0.25, 0, 0.728039, -0.25, 0, 0.25, 0, 1.75, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1, 1.5, 1.9 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Hand2:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -7.5, -0.25, 0, 0.25, 0, -8.08398, -0.25, 0, 0.25, 0, -7.5, -0.25, 0, 0.25, 0, -8.08398, -0.25, 0, 0.25, 0, -7.5, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1, 1.5, 1.9 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Hand2:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 59.9999, -0.25, 0, 0.25, 0, 22.5121, -0.25, 0, 0.25, 0, -44.9999, -0.25, 0, 0.25, 0, 22.5121, -0.25, 0, 0.25, 0, 59.9999, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1, 1.5, 1.9 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Leg2:position:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( -2.42435, -0.25, 0, 0.25, 0, 0.0582352, -0.25, 0, 0.25, 0, -2.99305, -0.25, 0, 0.25, 0, 0.0582352, -0.25, 0, 0.25, 0, -2.42435, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1, 1.5, 1.9 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("Leg2:position:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 15, -0.25, 0, 0.25, 0, 16.0923, -0.25, 0, 0.25, 0, 14.8441, -0.25, 0, 0.25, 0, 16.0923, -0.25, 0, 0.25, 0, 15, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1, 1.5, 1.9 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("Leg2:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 44.9999, -0.25, 0, 0.25, 0, 10.1302, -0.25, 0, 0.25, 0, -30, -0.25, 0, 0.25, 0, 10.1302, -0.25, 0, 0.25, 0, 44.9999, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1, 1.5, 1.9 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("Leg:position:x")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( -2.6966, -0.25, 0, 0.25, 0, -0.214008, -0.25, 0, 0.25, 0, -3.26529, -0.25, 0, 0.25, 0, -0.214008, -0.25, 0, 0.25, 0, -2.6966, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1, 1.5, 1.9 )
}
tracks/7/type = "bezier"
tracks/7/path = NodePath("Leg:position:y")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"points": PoolRealArray( 15, -0.25, 0, 0.25, 0, 16.0923, -0.25, 0, 0.25, 0, 14.8441, -0.25, 0, 0.25, 0, 16.0923, -0.25, 0, 0.25, 0, 15, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1, 1.5, 1.9 )
}
tracks/8/type = "bezier"
tracks/8/path = NodePath("Leg:rotation_degrees")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"points": PoolRealArray( -44.9999, -0.25, 0, 0.25, 0, -15, -0.25, 0, 0.25, 0, 44.9999, -0.25, 0, 0.25, 0, -15, -0.25, 0, 0.25, 0, -44.9999, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1, 1.5, 1.9 )
}
tracks/9/type = "bezier"
tracks/9/path = NodePath("Body:position:x")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1, 1.5, 1.9 )
}
tracks/10/type = "bezier"
tracks/10/path = NodePath("Body:position:y")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"points": PoolRealArray( -0.880428, -0.25, 0, 0.25, 0, -0.880428, -0.25, 0, 0.25, 0, -0.880428, -0.25, 0, 0.25, 0, -0.880428, -0.25, 0, 0.25, 0, -0.880428, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1, 1.5, 1.9 )
}
tracks/11/type = "bezier"
tracks/11/path = NodePath("Body:rotation_degrees")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"points": PoolRealArray( 15, -0.25, 0, 0.25, 0, 5.26044, -0.25, 0, 0.25, 0, 15, -0.25, 0, 0.25, 0, 5.26044, -0.25, 0, 0.25, 0, 15, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1, 1.5, 1.9 )
}
tracks/12/type = "bezier"
tracks/12/path = NodePath("Hand:position:x")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"points": PoolRealArray( 1.75, -0.25, 0, 0.25, 0, 0.728039, -0.25, 0, 0.25, 0, 2.33398, -0.25, 0, 0.25, 0, 0.728039, -0.25, 0, 0.25, 0, 1.75, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1, 1.5, 1.9 )
}
tracks/13/type = "bezier"
tracks/13/path = NodePath("Hand:position:y")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"points": PoolRealArray( -7.5114, -0.25, 0, 0.25, 0, -8.09538, -0.25, 0, 0.25, 0, -7.5114, -0.25, 0, 0.25, 0, -8.09538, -0.25, 0, 0.25, 0, -7.5114, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1, 1.5, 1.9 )
}
tracks/14/type = "bezier"
tracks/14/path = NodePath("Hand:rotation_degrees")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"points": PoolRealArray( -59.9999, -0.25, 0, 0.25, 0, -15, -0.25, 0, 0.25, 0, 44.9999, -0.25, 0, 0.25, 0, -15, -0.25, 0, 0.25, 0, -59.9999, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1, 1.5, 1.9 )
}
tracks/15/type = "bezier"
tracks/15/path = NodePath("hat:position:x")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/keys = {
"points": PoolRealArray( 1.21035, -0.25, 0, 0.25, 0, -2.46097, -0.25, 0, 0.25, 0, 2.43412, -0.25, 0, 0.25, 0, -2.46097, -0.25, 0, 0.25, 0, 1.21035, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1, 1.5, 1.9 )
}
tracks/16/type = "bezier"
tracks/16/path = NodePath("hat:position:y")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/keys = {
"points": PoolRealArray( -27.465, -0.25, 0, 0.25, 0, -30.6119, -0.25, 0, 0.25, 0, -29.0385, -0.25, 0, 0.25, 0, -30.6119, -0.25, 0, 0.25, 0, -27.465, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1, 1.5, 1.9 )
}
tracks/17/type = "bezier"
tracks/17/path = NodePath("hat:rotation_degrees")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/imported = false
tracks/17/enabled = true
tracks/17/keys = {
"points": PoolRealArray( -15, -0.25, 0, 0.25, 0, -30, -0.25, 0, 0.25, 0, -15, -0.25, 0, 0.25, 0, -30, -0.25, 0, 0.25, 0, -15, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1, 1.5, 1.9 )
}

[sub_resource type="OccluderPolygon2D" id=6]
polygon = PoolVector2Array( 10.914, -32.3349, 10.914, 31.6651, -5.08601, 31.6651, -5.08601, -32.3349 )

[sub_resource type="OccluderPolygon2D" id=7]
polygon = PoolVector2Array( 2, -0.0919008, 2, 19.9081, -2, 19.9081, -2, -0.0919008 )

[sub_resource type="OccluderPolygon2D" id=8]
polygon = PoolVector2Array( 1.96512, -0.0919008, 1.96512, 19.9081, -2.03488, 19.9081, -2.03488, -0.0919008 )

[sub_resource type="OccluderPolygon2D" id=9]
polygon = PoolVector2Array( 5.9785, 23, 5.9785, -9, 7.9785, -9, 7.9785, -11, 5.9785, -11, 5.9785, -23, -7.0215, -23, -7.0215, -13, -9.0215, -13, -9.0215, -11, -7.0215, -11, -7.0215, -9, -5.0215, -9, -5.0215, -7, -3.0215, -7, -3.0215, 23 )

[sub_resource type="OccluderPolygon2D" id=10]
polygon = PoolVector2Array( 2, 0, -2, 0, -2, 16, 2, 16 )

[sub_resource type="OccluderPolygon2D" id=11]
polygon = PoolVector2Array( -14.3445, 9.56282, -8.36769, 9.56288, -8.36763, 3.58602, -3.58614, 3.58607, -3.58613, 2.3907, -2.39075, 2.39071, -2.39072, -1.1954, 7.76994, -1.1953, 7.76995, -2.39068, 8.36763, -2.39067, 8.36765, -3.58604, 9.56301, -3.58603, 9.56303, -5.37909, 8.96535, -5.37909, 8.36766, -5.3791, 8.36768, -6.57447, 7.76999, -6.57448, 7.77, -7.76985, -13.149, -7.77005, -13.149, -6.57468, -14.3444, -6.57469 )

[sub_resource type="OccluderPolygon2D" id=12]
polygon = PoolVector2Array( -2.00006, 16, -2, -7.27177e-06, 2, 7.15256e-06, 1.99994, 16 )

[sub_resource type="OccluderPolygon2D" id=13]
polygon = PoolVector2Array( 12, 5, 12, 3, 6, 3, 6, -5, -7, -5, -7, 3, -12, 3, -12, 5 )

[node name="Player" type="KinematicBody2D"]
scale = Vector2( 4, 4 )
script = ExtResource( 5 )
SpeedEc = 100
SpeedLimit = 650
StoppingEc = 200
GravityEc = 35
GravityLimit = 400
JumpSpeed = 50
JumpLimit = 700
BulletTimeEffect = 5
StaminaTimerOri = 0.04
StaminaTimer = 0.04
ShootingSound = ExtResource( 11 )

[node name="PlayerAnimation" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 1 )
animation = "Idle"

[node name="Label" type="Label" parent="."]
margin_left = -50.0
margin_top = -50.0
margin_right = -18.0
margin_bottom = -34.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "100"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 12.0
margin_top = -50.0
margin_right = 24.0
margin_bottom = -34.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.121569, 1, 0.172549, 1 )
text = "20"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="."]
margin_left = -50.0
margin_top = -70.0
margin_right = -18.0
margin_bottom = -54.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.933333, 1, 0.145098, 1 )
custom_colors/font_outline_modulate = Color( 1, 0.329412, 0.0352941, 1 )
text = "100"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerCamera" type="Camera2D" parent="."]
position = Vector2( 0, -42 )
scale = Vector2( 1.31256, 1.68128 )
current = true
zoom = Vector2( 1.5, 1.5 )
smoothing_speed = 10.0
drag_margin_bottom = 0.15
__meta__ = {
"_edit_group_": true
}

[node name="PlayerCollisionBox" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, 1 )
shape = SubResource( 3 )

[node name="PlayerRig" type="Node2D" parent="."]
__meta__ = {
"_edit_group_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="PlayerRig"]
playback_speed = 3.0
method_call_mode = 1
anims/Idle = SubResource( 4 )
anims/Running = SubResource( 5 )

[node name="Hand2" type="Sprite" parent="PlayerRig"]
position = Vector2( 1, -8 )
texture = ExtResource( 7 )
offset = Vector2( 0, 8 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="PlayerRig/Hand2"]
position = Vector2( -0.728497, 8.08372 )
scale = Vector2( 0.25, 0.25 )
occluder = SubResource( 6 )

[node name="Leg2" type="Sprite" parent="PlayerRig"]
position = Vector2( 1.80712, 15.0919 )
texture = ExtResource( 9 )
offset = Vector2( 0, 10 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="PlayerRig/Leg2"]
occluder = SubResource( 7 )

[node name="Leg" type="Sprite" parent="PlayerRig"]
position = Vector2( 1.53488, 15.0919 )
texture = ExtResource( 9 )
offset = Vector2( 0, 10 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="PlayerRig/Leg"]
occluder = SubResource( 8 )

[node name="Body" type="Sprite" parent="PlayerRig"]
texture = ExtResource( 6 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="PlayerRig/Body"]
occluder = SubResource( 9 )

[node name="Hand" type="Sprite" parent="PlayerRig"]
position = Vector2( 1.75, -7.5 )
texture = ExtResource( 7 )
offset = Vector2( 0, 8 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="PlayerRig/Hand"]
occluder = SubResource( 10 )

[node name="Shooter" type="Node2D" parent="PlayerRig"]
visible = false
position = Vector2( 1.75, -7.5 )
rotation = -1.5708

[node name="pistol" type="Sprite" parent="PlayerRig/Shooter"]
position = Vector2( 2.24994, 17.25 )
rotation = 1.57079
scale = Vector2( 0.41828, 0.41828 )
texture = ExtResource( 10 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="PlayerRig/Shooter/pistol"]
position = Vector2( 2.39075, -0.597658 )
occluder = SubResource( 11 )

[node name="BulletPoint" type="Node2D" parent="PlayerRig/Shooter"]
position = Vector2( 4.38664, 22.1619 )

[node name="HandShooting" type="Sprite" parent="PlayerRig/Shooter"]
texture = ExtResource( 7 )
offset = Vector2( 0, 8 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="PlayerRig/Shooter/HandShooting"]
occluder = SubResource( 12 )

[node name="BulletGo" type="Node2D" parent="PlayerRig/Shooter"]
position = Vector2( 4.5, 58.25 )

[node name="AudioPlayer" type="AudioStreamPlayer2D" parent="PlayerRig/Shooter"]
position = Vector2( 4.5, 22.25 )
bus = "FX"

[node name="hat" type="Sprite" parent="PlayerRig"]
position = Vector2( 0, -28 )
texture = ExtResource( 8 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="PlayerRig/hat"]
occluder = SubResource( 13 )

[node name="AudioPlayer" type="AudioStreamPlayer2D" parent="."]
volume_db = 1.0
bus = "FX"

[node name="ShadowCaster" type="Node" parent="."]
